# parent-animation-test

./: CMakeLists.txt  LICENSE
src/: VideoLayoutModel.cpp  VideoLayoutModel.h  VideoPane.qml  main.cpp  main.qml
src/VideoPanePrivate/: FocusedLayout.qml  TiledLayout.qml  VideoView.qml
